<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pro Video Player</string>
    <string name="permission_required">Storage permission is required to browse videos</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="no_videos_found">No videos found</string>
    <string name="loading">Loading videos...</string>
    <string name="video_duration">Duration</string>
    <string name="video_size">Size</string>
    <string name="video_resolution">Resolution</string>
    <string name="settings">Settings</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="subtitles">Subtitles</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="no_subtitle">No Subtitle</string>
    <string name="select_audio_track">Select Audio Track</string>
    <string name="select_subtitle">Select Subtitle</string>
    <string name="track_disabled">Disabled</string>
    <string name="default_track">Default</string>
    <string name="fit_screen">Fit Screen</string>
    <string name="fill_screen">Fill Screen</string>
    <string name="stretch">Stretch</string>
    <string name="ratio_16_9">16:9</string>
    <string name="ratio_4_3">4:3</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="speed_0_25x">0.25x</string>
    <string name="speed_0_5x">0.5x</string>
    <string name="speed_0_75x">0.75x</string>
    <string name="speed_1x">1x</string>
    <string name="speed_1_25x">1.25x</string>
    <string name="speed_1_5x">1.5x</string>
    <string name="speed_1_75x">1.75x</string>
    <string name="speed_2x">2x</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_denied">Permission denied. Please grant access in app settings.</string>
    <string name="error_playing_video">Error playing video</string>
    <string name="videos">Videos</string>
    <string name="folders">Folders</string>
    <string name="all_videos">All Videos</string>
    <string name="recent">Recent</string>
</resources>
